2015-09-30 Roman
- DB.LibsDB.vcaBase.db: Mostly adapted for real permissions for users into new groups "op", "ITW".
- DB.Model.{AGLKS,Boiler}.St.db: Some generic properties moved from DB to the configuration file, like:
	External Hosts, Generic input transports, Security users and groups.
    Table "SYS" is purged from old configurations, part from them are moved to the configuration file.
- DB.Model.{AGLKS,Boiler}.vca.db: Main project's permition set to: "root:op" and RWRWR_.
- Security: standard users "root", "user" and groups "root", "user" creation added only after the subsystem loading and its lack.
    TSecurity::usrGrpList() set for return all groups for user "root".
- FIX:Protocol.HTTP: Fix multiplication for autologin user's items at each it loading.


2015-09-30 fido_max
- FIX:DAQ.FT3: Minor errors fixed.
- DAQ.FT3: Event handling optimized. B_ACCOUNT: Period_V, dP, T, P, E implemented. B_BUC: set time, uptime, modification implemented.


2015-09-29 Roman
- FIX:UI.VCAEngine: Attr::VizerSpec processing fix, which caused access at Web and spare attributes transfer.


2015-09-25 Roman
- FIX:Transport.Sockets: Not decremental counter per host connections fixed.


2015-09-25 Roman
- DB.LibsDB.vcaBase.db: Main.RootPgSo: New flag "qMergeMess" is appended to notification type 2.
    Option "gain -20" for the buzzer, notification type 1, to synth by sox is added.
- !!!!:Transport.{Sockets,SSL}: Set unified to the client's work-control object.
    Statistic information per active connection is added, include: socket FD, client host address, connection and last request time, IO traffic.
    Maximum clients per host limit is added.
- Transport.Sockets: Default port set to 10005, default for the OpenSCADA control interface.
- UI.QTCfg: List view widget is moved to ListView class, inherited from QListWidget for sizeHint() set to 5 rows for height.